removed css color &h1 heading
changed color and h1 heading

--- a/box-model.html
+++ b/box-model.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Box Model practice</title>
+    <title>Box Model practice for git changes</title>
     <meta name="robots" content="noindex, nofollow">
     <!--index, follow - default so don't have to use, none - shortcut for noindex, nofollow-->
     <meta name="description" content="Everything you need to know about the box model and CSS">
